# message-contract

./: Cargo.toml  README.md
src/: README.md  backend.rs  contract.rs  lib.rs  msg.rs  state.rs  viewing_key.rs
